# algoteque-code-assessment

./: .dockerignore  .gitignore  Dockerfile  Insomnia_export.json  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
service/: dataclasses.py  dataloaders.py  dependencies.py  enums.py  main.py  router.py  schema.py  settings.py
service/services/: quote.py
tests/: conftest.py  test_api.py  test_dataloaders.py
tests/__snapshots__/: test_api.ambr
tests/services/: test_quote_service.py
