[project]
name = "algoteque-code-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "syrupy>=4.8.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest]
asyncio_mode = "auto"
pythonpath = "."
testpaths = [
    "tests"
]
